# boxx

./: .gitignore
drafts/wasm_webworkers/: boxx.html  build_wasm.bat  httpd.py  library.js  main.js  wasm_webworkers.url  worker.js  worker_wasm.cpp  worker_wasm.wasm
magnum/: how_to_build.txt
project/: CMakeLists.txt  CMakeSettings.json  build.gradle  build_android_arm.bat  build_android_arm64.bat  build_android_gradle.bat  build_emscripten.bat  cmake_run.bat  debug.keystore  local.properties  local.properties.off  temp.keystore
project/assets/alien-pro/: alien-pro.json
project/modules/: FindSDL2.cmake  x86-windows-msvc.cmake
project/src/: CMakeLists.txt  Game.cpp  Game.h  GameEnvironment.h  WebApplication.css  app.cpp  app.h  boxx.html  boxx.js  boxx.wasm  resources.conf  spineIntegration.cpp  spineIntegration.h
project/src/curl/: curl_test.cpp
project/src/graphics/: Graphics.h  RectF.h  SimpleShader.cpp  SimpleShader.h  Size.h  Texture.cpp  Texture.h  TextureInterface.h  Vec2.h
project/src/main/: AndroidManifest.xml
project/src/main/java/com/boxx/game/: BoxxActivity.java
project/src/shaders/: BasicShader.cpp  BasicShader.frag  BasicShader.h  BasicShader.vert  BasicShaderOneColor.cpp  BasicShaderOneColor.h  TexturedTriangleShader.frag  TwoColorsShader.cpp  TwoColorsShader.frag  TwoColorsShader.h  TwoColorsShader.vert  resources.conf
project/src/spineTest/: spineTest.cpp  spineTest.h
project/src/utils/: file2vec.cpp  file2vec.h
project/web/: boxx.js
sdl2/: how_to_build.txt
sdl2/SDL2-2.0.10/VisualC/SDL/: SDL.vcxproj
sdl2/SDL2-2.0.10/VisualC/SDLmain/: SDLmain.vcxproj
sdl2/SDL2-2.0.10/VisualC/tests/loopwave/: loopwave.vcxproj
sdl2/SDL2-2.0.10/VisualC/tests/testatomic/: testatomic.vcxproj
sdl2/SDL2-2.0.10/VisualC/tests/testautomation/: testautomation.vcxproj
sdl2/SDL2-2.0.10/VisualC/tests/testdraw2/: testdraw2.vcxproj
sdl2/SDL2-2.0.10/VisualC/tests/testfile/: testfile.vcxproj
sdl2/SDL2-2.0.10/VisualC/tests/testgesture/: testgesture.vcxproj
sdl2/SDL2-2.0.10/VisualC/tests/testgl2/: testgl2.vcxproj
sdl2/SDL2-2.0.10/VisualC/tests/testgles2/: testgles2.vcxproj
sdl2/SDL2-2.0.10/VisualC/tests/testplatform/: testplatform.vcxproj
sdl2/SDL2-2.0.10/VisualC/tests/testpower/: testpower.vcxproj
sdl2/SDL2-2.0.10/VisualC/tests/testrendertarget/: testrendertarget.vcxproj
sdl2/SDL2-2.0.10/VisualC/tests/testrumble/: testrumble.vcxproj
sdl2/SDL2-2.0.10/VisualC/tests/testscale/: testscale.vcxproj
sdl2/SDL2-2.0.10/VisualC/tests/testvulkan/: testvulkan.vcxproj
sdl2/SDL2-2.0.10/VisualC/tests/testyuv/: testyuv.vcxproj
